--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ published: true
 
 <div class="home">
 
-  <h1 class="page-heading">Posts</h1>
+  <h1 class="page-heading">Chapters</h1>
   
   <ul>
     {% for collection in site.collections %}
