--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@ published: true
       <li><a href="{{ collection[0] }}">{{ collection[0] | capitalize }}</a></li>
     {% endfor %}
   </ul>
+  
+  <ul>
+  {% for tag in page.tags %}
+      <li> {{tag}} </li>
+  {% endfor %}
+  </ul>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
